--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "3.2.5",
     "rimraf": "5.0.5",
     "rollup": "4.12.0",
+    "rollup-plugin-ignore": "1.0.10",
     "rollup-plugin-styles": "4.0.0",
     "tsx": "4.7.1",
     "typescript": "5.3.3"
